Додано оверлей на портфоліо

--- a/portfolio.html
+++ b/portfolio.html
@@ -107,13 +107,12 @@
                     width="370"
                     height="294"
                   />
-                  <div class="work-overlay">
-                    <p class="work-overlay-text">
-                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
-                      компании или частном лице.
-                    </p>
-                  </div>
+
+                  <p class="work-overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
                 </div>
 
                 <div class="work-content">
@@ -125,12 +124,20 @@
 
             <li class="work-item">
               <a class="work-link link" href="" target="_blank" rel="noopener noreferrer nofollow">
-                <img
-                  src="./images/portfolio2.jpg"
-                  alt="два баскетболиста во время игры"
-                  width="370"
-                  height="294"
-                />
+                <div class="work-thumb">
+                  <img
+                    src="./images/portfolio2.jpg"
+                    alt="два баскетболиста во время игры"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="work-overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
+
                 <div class="work-content">
                   <h2 class="work-title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -142,12 +149,20 @@
 
             <li class="work-item">
               <a class="work-link link" href="" target="_blank" rel="noopener noreferrer nofollow">
-                <img
-                  src="./images/portfolio3.jpg"
-                  alt="логотип ресторана seafood в виде рыбы"
-                  width="370"
-                  height="294"
-                />
+                <div class="work-thumb">
+                  <img
+                    src="./images/portfolio3.jpg"
+                    alt="логотип ресторана seafood в виде рыбы"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="work-overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
+
                 <div class="work-content">
                   <h2 class="work-title">Ресторан <span lang="en">Seafood</span></h2>
                   <p class="work-text">Приложение</p>
@@ -157,7 +172,15 @@
 
             <li class="work-item">
               <a class="work-link link" href="" target="_blank" rel="noopener noreferrer nofollow">
-                <img src="./images/portfolio4.jpg" alt="наушники" width="370" height="294" />
+                <div class="work-thumb">
+                  <img src="./images/portfolio4.jpg" alt="наушники" width="370" height="294" />
+                  <p class="work-overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
+
                 <div class="work-content">
                   <h2 class="work-title">Проект <span lang="en">Prime</span></h2>
                   <p class="work-text">Маркетинг</p>
@@ -167,12 +190,20 @@
 
             <li class="work-item">
               <a class="work-link link" href="" target="_blank" rel="noopener noreferrer nofollow">
-                <img
-                  src="./images/portfolio5.jpg"
-                  alt="белая и коричневая упаковочные коробки"
-                  width="370"
-                  height="294"
-                />
+                <div class="work-thumb">
+                  <img
+                    src="./images/portfolio5.jpg"
+                    alt="белая и коричневая упаковочные коробки"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="work-overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
+
                 <div class="work-content">
                   <h2 class="work-title">Проект <span lang="en">Boxes</span></h2>
                   <p class="work-text">Приложение</p>
@@ -182,12 +213,20 @@
 
             <li class="work-item">
               <a class="work-link link" href="" target="_blank" rel="noopener noreferrer nofollow">
-                <img
-                  src="./images/portfolio6.jpg"
-                  alt="компютер с загруженным сайтом"
-                  width="370"
-                  height="294"
-                />
+                <div class="work-thumb">
+                  <img
+                    src="./images/portfolio6.jpg"
+                    alt="компютер с загруженным сайтом"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="work-overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
+
                 <div class="work-content">
                   <h2 class="work-title" lang="en">Inspiration has no Borders</h2>
                   <p class="work-text">Веб-сайт</p>
@@ -197,7 +236,20 @@
 
             <li class="work-item">
               <a class="work-link link" href="" target="_blank" rel="noopener noreferrer nofollow">
-                <img src="./images/portfolio7.jpg" alt="открытая книга" width="370" height="294" />
+                <div class="work-thumb">
+                  <img
+                    src="./images/portfolio7.jpg"
+                    alt="открытая книга"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="work-overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
+
                 <div class="work-content">
                   <h2 class="work-title" lang="en">Издание Limited Edition</h2>
                   <p class="work-text">Дизайн</p>
@@ -207,7 +259,15 @@
 
             <li class="work-item">
               <a class="work-link link" href="" target="_blank" rel="noopener noreferrer nofollow">
-                <img src="./images/portfolio8.jpg" alt="этикетка" width="370" height="294" />
+                <div class="work-thumb">
+                  <img src="./images/portfolio8.jpg" alt="этикетка" width="370" height="294" />
+                  <p class="work-overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
+
                 <div class="work-content">
                   <h2 class="work-title">Проект <span lang="en">LAB</span></h2>
                   <p class="work-text">Маркетинг</p>
@@ -217,12 +277,20 @@
 
             <li class="work-item">
               <a class="work-link link" href="" target="_blank" rel="noopener noreferrer nofollow">
-                <img
-                  src="./images/portfolio9.jpg"
-                  alt="человек работает на ноутбуке с приложением"
-                  width="370"
-                  height="294"
-                />
+                <div class="work-thumb">
+                  <img
+                    src="./images/portfolio9.jpg"
+                    alt="человек работает на ноутбуке с приложением"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="work-overlay">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
+
                 <div class="work-content">
                   <h2 class="work-title" lang="en">Growing Business</h2>
                   <p class="work-text">Приложение</p>
