--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
                 width="370"
                 height="294"
               />
+              <p class="about-item-text">Десктопные приложения</p>
             </li>
 
             <li class="about-item">
@@ -154,6 +155,7 @@
                 width="370"
                 height="294"
               />
+              <p class="about-item-text">Мобильные приложения</p>
             </li>
 
             <li class="about-item">
@@ -163,6 +165,7 @@
                 width="370"
                 height="294"
               />
+              <p class="about-item-text">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
