--- a/index.html
+++ b/index.html
@@ -506,19 +506,9 @@
           similique? Pariatur quos quasi reiciendis culpa!
         </p>
         <button type="button" class="modal-btn" data-modal-close>
-          X
-          <!-- <svg
-            width="11"
-            height="11"
-            viewBox="0 0 11 11"
-            fill="#000000"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M11 1.10786L9.89214 0L5.5 4.39214L1.10786 0L0 1.10786L4.39214 5.5L0 9.89214L1.10786 11L5.5 6.60786L9.89214 11L11 9.89214L6.60786 5.5L11 1.10786Z"
-              fill="black"
-            />
-          </svg> -->
+          <svg class="modal-icon" widht="11" height="11">
+            <use href="./images/symbol-defs.svg#icon-modal-close"></use>
+          </svg>
         </button>
       </div>
     </div>
